--- a/app/src/main/res/layout/content_contact.xml
+++ b/app/src/main/res/layout/content_contact.xml
@@ -8,9 +8,15 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.xjy.widget.example.contact.ContactActivity"
     tools:showIn="@layout/activity_contact">
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+
+    <com.xjy.widget.bounce.BounceLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello World!" />
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Hello World!" />
+    </com.xjy.widget.bounce.BounceLayout>
 </RelativeLayout>
