--- a/app/src/main/res/layout/item_action_view.xml
+++ b/app/src/main/res/layout/item_action_view.xml
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="wrap_content"
-    android:padding="10dp"
-    android:background="@color/colorPrimary"
-    android:layout_height="wrap_content">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    >
+
     <TextView
-        android:textColor="#fff"
-        android:text="My Action"
+        android:padding="10dp"
+        android:background="@color/colorPrimary"
         android:id="@+id/action"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="Action1"
+        android:textColor="#fff" />
+
+    <TextView
+        android:padding="10dp"
+        android:background="@color/colorAccent"
+        android:id="@+id/action2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Action2"
+        android:textColor="#fff" />
 </LinearLayout>
