--- a/multipleAdapter/src/main/res/values/ids.xml
+++ b/multipleAdapter/src/main/res/values/ids.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="item_keep" type="id"></item>
+    <item name="jy_section" type="id"></item>
 </resources>
