--- a/bounceLayout/src/main/res/layout/jy_header_footer.xml
+++ b/bounceLayout/src/main/res/layout/jy_header_footer.xml
@@ -7,6 +7,8 @@
 
     <TextView
         android:id="@+id/textView"
+        android:textColor="@android:color/white"
+        android:textSize="22sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
