--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,11 @@
             android:text="Hello World!" />
     </com.xjy.widget.bounce.BounceLayout>
 
+    <com.xjy.widget.bounce.TextPathView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="200dp" />
+
 
 
 </RelativeLayout>
