--- a/bounceLayout/src/main/res/layout/jy_header_footer.xml
+++ b/bounceLayout/src/main/res/layout/jy_header_footer.xml
@@ -5,8 +5,8 @@
     android:padding="20dp"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView"
+    <com.xjy.widget.bounce.TextPathView
+        android:id="@+id/xjy_textView"
         android:textColor="@android:color/white"
         android:textSize="22sp"
         android:layout_width="wrap_content"
